DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/ActualBilledDate__c.field-meta.xml
<CustomField>
    <fullName>ActualBilledDate__c</fullName>
    <label>Actual Billed Date</label>
    <type>Date</type>
</CustomField>