DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Contract_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_Months__c</fullName>
    <label>Contract Period (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>