DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Disconnected_Date__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Date__c</fullName>
    <label>Disconnected Date</label>
    <type>Date</type>
</CustomField>