DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Estimated_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bill_Date__c</fullName>
    <label>Estimated Bill Date</label>
    <type>Date</type>
</CustomField>