DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Net_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value__c</fullName>
    <label>Net Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>