DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>Opportunity ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>