DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/ProRata_MRC_Est__c.field-meta.xml
<CustomField>
    <fullName>ProRata_MRC_Est__c</fullName>
    <label>ProRata MRC (Est)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>