DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Quantity_Users__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Users__c</fullName>
    <label>Quantity / Users</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>