DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>