DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/Service_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Product Key</label>
    <type>Text</type>
</CustomField>