DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/ServiceRequest_del__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequest_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Products</relationshipLabel>
    <relationshipName>Service_Products_del</relationshipName>
    <type>Lookup</type>
</CustomField>