DigicielFull/force-app/main/default/objects/ServiceProduct__c/fields/SIDStage__c.field-meta.xml
<CustomField>
    <fullName>SIDStage__c</fullName>
    <label>SID Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Installed/Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>